--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -90,6 +90,8 @@
 		<artifactId>spring-boot-starter-validation</artifactId>
 	</dependency>
 
+
+
 	<!-- JWT -->
 	<dependency>
 		<groupId>io.jsonwebtoken</groupId>
@@ -117,11 +119,34 @@
 	</dependency>
 
 	<!-- Rate Limiting -->
-
         <dependency>
             <groupId>com.bucket4j</groupId>
             <artifactId>bucket4j-core</artifactId>
             <version>8.7.0</version>
+        </dependency>
+
+        <!-- Caching Support -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        
+        <!-- Caffeine Cache (in-memory) -->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>3.1.8</version>
+        </dependency>
+
+        <!-- Redis Cache (optional for production) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
 	</dependencies>
 
