--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,13 +4,15 @@
   "description": "Frontend for Lawyer Booking Audio Processing System",
   "private": true,
   "dependencies": {
+    "@stomp/stompjs": "^7.2.1",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "sockjs-client": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
